# CI2024_project-work

./: .gitignore  README.md  pyproject.toml  s333962.py
docs/: general_log_20250123_092801.txt  general_log_20250123_103148.txt  general_log_20250123_104501.txt
src/: main.py  memetic_config.py
src/core/: evaluator.py  safe_math.py  statistics.py  tree.py
src/experiments/problem_0/logs/: p_0_20250123_103148_log.csv  p_0_20250123_104501_log.csv
src/experiments/problem_1/logs/: p_1_20250123_103458_log.csv  p_1_20250123_104502_log.csv
src/experiments/problem_2/logs/: p_2_20250123_104502_log.csv
src/experiments/problem_3/logs/: p_3_20250123_104503_log.csv
src/experiments/problem_4/logs/: p_4_20250123_104504_log.csv
src/experiments/problem_5/logs/: p_5_20250123_104505_log.csv
src/experiments/problem_6/logs/: p_6_20250123_104506_log.csv
src/experiments/problem_7/logs/: p_7_20250123_104507_log.csv
src/experiments/problem_8/logs/: p_8_20250123_104509_log.csv
src/memetic/: crossover.py  evolution.py  local_search.py  mutation.py  selection.py
src/utility/: logger.py  plotting.py  utils.py
